adding add form structure to html file Relates #18

--- a/seller-add-product/seller-dashboard.html
+++ b/seller-add-product/seller-dashboard.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Seller Add Product</title>
-</head>
-<body>
-</body>
-<script src="main.js"></script>
+  </head>
+  <body>
+    <form action="#">
+      <label for="name"></label>
+      <input type="text" name="" id="name" required>
+      <label for="detail"></label>
+      <input type="text" name="" id="detail">
+      <label for="price"></label>
+      <input type="text" name="" id="price" required>
+      <label for="image-link"></label>
+      <input type="text" name="" id="image-link" required>
+      <label for="category"></label>
+      <select name="" id="" required>
+          <option value="men">Mens</option>
+          <option value="women">Women</option>
+          <option value="childrens">Childrens</option>
+      </select>
+    </form>
+  </body>
+  <script src="main.js"></script>
 </html>
