--- a/buyer-cart/buyer-cart.html
+++ b/buyer-cart/buyer-cart.html
@@ -4,24 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E%22%3E">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Cart</title>
+    <title>Buyer Cart</title>
 </head>
 <body>
-    <nav>
-        <h1>Bazzar</h1>
-
-        <a href="#"><input type="submit" value="Back" class="btn-cart"></a>
-    </nav>
-    <div class="section">
-
-    </div>
-    </div>
-    <script src="main.js"></script>
 </body>
+<script src="main.js"></script>
 </html>
