--- a/seller-add-product/seller-dashboard.html
+++ b/seller-add-product/seller-dashboard.html
@@ -25,19 +25,19 @@
       <form class="form" action="#">
         <div class="row">
           <label for="name">Name</label>
-          <input type="text" name="" id="name" required />
+          <input type="text" name="" id="name" placeholder="Product Name" required />
         </div>
         <div class="row">
           <label for="details">Details</label>
-          <input type="text" name="" id="details" />
+          <input type="text" name="" id="details" placeholder="Details" />
         </div>
         <div class="row">
           <label for="price">Price</label>
-          <input type="number" name="" id="price" required />
+          <input type="number" name="" id="price" required placeholder="Price" />
         </div>
         <div class="row">
           <label for="img-link">Image Link</label>
-          <input type="url" name="" id="img-link" required />
+          <input type="url" name="" id="img-link" required placeholder="Image Link" />
         </div>
         <div class="row">
           <label for="category">Category</label>
@@ -48,7 +48,10 @@
           </select>
         </div>
         <br />
-        <button type="submit" id="confirm">Confirm</button>
+        <div class="row">
+          <button type="button" id="dashboard">Dashboard</button>
+          <button type="submit" id="confirm">Confirm</button>
+        </div>
       </form>
     </main>
   </body>
