--- a/seller-add-product/seller-dashboard.html
+++ b/seller-add-product/seller-dashboard.html
@@ -25,7 +25,13 @@
       <form class="form" action="#">
         <div class="row">
           <label for="name">Name</label>
-          <input type="text" name="" id="name" placeholder="Product Name" required />
+          <input
+            type="text"
+            name=""
+            id="name"
+            placeholder="Product Name"
+            required
+          />
         </div>
         <div class="row">
           <label for="details">Details</label>
@@ -33,11 +39,23 @@
         </div>
         <div class="row">
           <label for="price">Price</label>
-          <input type="number" name="" id="price" required placeholder="Price" />
+          <input
+            type="number"
+            name=""
+            id="price"
+            required
+            placeholder="Price"
+          />
         </div>
         <div class="row">
           <label for="img-link">Image Link</label>
-          <input type="url" name="" id="img-link" required placeholder="Image Link" />
+          <input
+            type="url"
+            name=""
+            id="img-link"
+            required
+            placeholder="Image Link"
+          />
         </div>
         <div class="row">
           <label for="category">Category</label>
