add links Relates #33

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="text">
         <p>Who Are You ?</p>
 
-        <a href="#"><input type="submit" value="Buyer"></a>
-        <a href="#"><input type="submit" value="Saller" ></a>
+        <a href="buyer-dashboard/buyer-dashboard.html"><input type="submit" value="Buyer"></a>
+        <a href="seller-dashboard/seller-dashboard.html"><input type="submit" value="Saller" ></a>
 
       </div>
 
