add delete button Relates #37

--- a/buyer-dashboard/buyer-dashboard.html
+++ b/buyer-dashboard/buyer-dashboard.html
@@ -25,7 +25,7 @@
             <option value="women">women</option>
             <option value="children">children</option>
           </select>
-          <a href="#"><input type="submit" value="Cart" class="btn-cart"></a>
+          <a href="../buyer-cart/buyer-cart.html"><input type="submit" value="Cart" class="btn-cart"></a>
     </nav>
     <div class="section">
        
