Creat total price in cart page using html css and js relates #16

--- a/buyer-cart/buyer-cart.html
+++ b/buyer-cart/buyer-cart.html
@@ -26,6 +26,7 @@
         
         
     </div>
+    <h2>Total Parice: <span class="totalPrice"></span></h2>
     <button class="deleteAll">Delete All</button>
 
     <script src="main.js"></script>
