--- a/ buyer-dashboard/buyer-dashboard.html
+++ b/ buyer-dashboard/buyer-dashboard.html
@@ -18,9 +18,10 @@
 <body>
     <nav>
         <h1>Bazzar</h1>
-        <input type="text" placeholder="Search" class="search">
-        <select name="categories" id="categories">
-            <option value="All">All</option>
+        <input type="text" placeholder="Search" class="search" value="" id="search">
+        <button onclick="search()"></button>
+        <select name="categories" id="categories" >
+            <option value="All"  selected>All</option>
             <option value="men">men</option>
             <option value="women">women</option>
             <option value="children">children</option>
@@ -30,6 +31,7 @@
     <div class="section">
        
     </div>
-    <script src="main.js"></script>
+    <script src="../actions.js"></script>
+    <script  src="./main.js"></script>
 </body>
 </html>
