Fix links And Desgin of buyer Page relates #47

--- a/index.html
+++ b/index.html
@@ -6,31 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-
 
     <title>Bazzar</title>
   </head>
   <body>
     <div class="containter">
-
       <h1>Bazzar</h1>
 
       <div class="text">
         <p>Who Are You ?</p>
 
-        <a href="./buyer-dashboard/buyer-dashboard.html"><input type="submit" value="Buyer"></a>
-        <a href="./seller-dashboard/seller-dashboard.html"><input type="submit" value="Seller" ></a>
-
+        <a href="./ buyer-dashboard/buyer-dashboard.html"
+          ><input type="submit" value="Buyer"
+        /></a>
+        <a href="./seller-dashboard/seller-dashboard.html"
+          ><input type="submit" value="Seller"
+        /></a>
       </div>
-
     </div>
-    
   </body>
 </html>
