fix lcal storge code relates #47

--- a/buyer-cart/buyer-cart.html
+++ b/buyer-cart/buyer-cart.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="section"></div>
-    <h2>Total Parice: <span class="totalPrice"></span></h2>
+    <h2 class="totalpriceH">Total Parice: <span class="totalPrice"></span></h2>
     <button class="deleteAll">Delete All</button>
 
     <script src="main.js"></script>
