Functionality of seller pages Adding new Product, Delete exist product, Edit exist product, enchance and fix pages structure, enchance and fix some style Relates #19 #20 #21

--- a/seller-add-product/seller-add-product.html
+++ b/seller-add-product/seller-add-product.html
@@ -60,9 +60,9 @@
         <div class="row">
           <label for="category">Category</label>
           <select name="" id="category" required>
-            <option value="men">Mens</option>
+            <option value="men">Men</option>
             <option value="women">Women</option>
-            <option value="childrens">Childrens</option>
+            <option value="children">Children</option>
           </select>
         </div>
         <br />
@@ -73,5 +73,6 @@
       </form>
     </main>
   </body>
+  <script src="../actions.js"></script>
   <script src="main.js"></script>
 </html>
