--- a/seller-dashboard/seller-dashboard.html
+++ b/seller-dashboard/seller-dashboard.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Seller Dashboard</title>
-</head>
-<body>
-</body>
-<script src="main.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>ٍSeller Dashboard</title>
+  </head>
+  <body>
+    <nav>
+      <h1>Bazzar</h1>
+      <input
+        type="text"
+        placeholder="Search"
+        class="search"
+        value=""
+        id="search"
+      />
+      <button onclick="search()"></button>
+      <select name="categories" id="categories">
+        <option value="All" selected>All</option>
+        <option value="men">Men</option>
+        <option value="women">Women</option>
+        <option value="children">Children</option>
+      </select>
+    </nav>
+    <div class="section"></div>
+    <script src="../actions.js"></script>
+    <script src="./main.js"></script>
+  </body>
 </html>
