Add Test Of TotalPrice Relates #55

--- a/seller-dashboard/seller-dashboard.html
+++ b/seller-dashboard/seller-dashboard.html
@@ -35,7 +35,9 @@
         <option value="children">Children</option>
       </select>
     </nav>
-    <div class="section"></div>
+    <div class="section">
+    </div>
+    <button class="btn-add-pro"><a href="../seller-add-product/seller-add-product.html">Add Product</a></button>
     <script src="../actions.js"></script>
     <script src="./main.js"></script>
   </body>
